--- a/Module01/ex04/Makefile
+++ b/Module01/ex04/Makefile
@@ -7,12 +7,14 @@ OBJS	= ${SRCS:%.cpp=%.o}
 
 CC	= c++
 
-FLAGS	= -Wall -Wextra -Werror -std=c++98
-
-$(NAME)	:	$(OBJS)
-		$(CC) $(FLAGS) $(OBJS) -o $(NAME)
+FLAGS	= -Wall -Wextra -Werror -std=c++98 -g
 
 all	:	$(NAME)
+
+
+$(NAME)	:	$(OBJS)
+		$(CC) $(FLAGS) $(OBJS) -o ${NAME}
+
 
 clean	:
 		rm -rf $(OBJS)
