--- a/Module02/ex02/Makefile
+++ b/Module02/ex02/Makefile
@@ -1,13 +1,13 @@
-NAME	= phonebook
+NAME	= a.out
 
-SRCS	= Contact.cpp PhoneBook.cpp main.cpp
+SRCS	= main.cpp Fixed.cpp
 
 
 OBJS	= ${SRCS:%.cpp=%.o}
 
 CC	= c++
 
-FLAGS	= -Wall -Wextra -Werror -std=c++98
+FLAGS	= -Wall -Wextra -Werror -std=c++98 -g
 
 all	:	$(NAME)
 
