module 03 on progress, learning inheritance

--- a/Module02/ex01/Makefile
+++ b/Module02/ex01/Makefile
@@ -2,19 +2,19 @@ NAME	= a.out
 
 SRCS	= main.cpp Fixed.cpp
 
-
-OBJS	= ${SRCS:%.cpp=%.o}
-
 CC	= c++
 
-FLAGS	= -Wall -Wextra -Werror -std=c++98 -g
+OBJS	= $(SRCS:.cpp=.o)
+
+CFLAGS	= -Wall -Wextra -Werror -std=c++98 -g3
 
 all	:	$(NAME)
 
+%.o	:	%.cpp
+		$(CC) $(CFLAGS) $(INCLUDES) -c $< -o $@
 
 $(NAME)	:	$(OBJS)
-		$(CC) $(FLAGS) $(OBJS) -o ${NAME}
-
+		$(CC) $(CFLAGS) $(INCLUDES) $(OBJS) -o $@
 
 clean	:
 		rm -rf $(OBJS)
@@ -23,6 +23,6 @@ fclean	:	clean
 		rm -rf $(NAME)
 
 re	:	fclean
-		make all
+		make
 
-.PHONY	:	all clean fclean re
+.PHONY	:	all fclean clean re
